# Siemens-Internship-Assignments-2024

./: README.md
Assignment1/: README.md  output.csv
Assignment1/docs/: sample_output.csv
Assignment1/src/: __init__.py  client.py  main.py  server.py  utils.py
Assignment1/src/tests/: test_input_validation.py  test_server_client.py
Assignment1/src/tests/inputs/: duplicate_test.txt  one_test.txt  special_chars_test.txt  three_test.txt  two_test.txt
Assignment1/src/tests/outputs/: one_test_out.csv  three_test_out.csv
Assignment2/: .gitignore  CMakeLists.txt  README.md  output.csv
Assignment2/docs/: sample_output.csv
Assignment2/src/: main.cpp  packet_tester.cpp  packet_tester.hpp
Assignment2/tests/: test_packettester.cpp
